@@ -1,5 +1,3 @@
-*	Change directory in readline helper
-
 *	Make mod arithmetic propagation into user functions possible
 
 *	Gauss needs to be mod aware
