@@ -1,3 +1,9 @@
+Wed Jun 11 11:27:18 2003  George Lebl <jirka@5z.com>
+
+	* src/genius-readline-helper.c, src/inter.c: change directory in the
+	  readline helper, and update the helper completion routine to match
+	  inter.c
+
 Fri Jun 06 16:25:15 2003  George Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: the preference dialog has hig ordered buttons
